Fix issues with spaces in paths
Fixes https://github.com/liblouis/liblouis-java/issues/16 and
hopefully also https://github.com/liblouis/liblouis-java/issues/15.

Co-Authored-By: Alexander <alexander233@github.com>

see https://github.com/liblouis/liblouis-java/pull/17